# 3-python-package-snake-charmers-on-a-plane

./: Pipfile  README.md  example.md  pyproject.toml
.github/workflows/: build.yaml
src/snakecharmerpackage/: __main__.py  random_snake.py  settings.py
tests/: test_random_snake.py
